Don't always recompress contact photos when saving The patch from RB did not apply cleanly so I had to hand-patch in a few files.  I hope I didn't screwup.

Thanks for the patch Sebastian!

REVIEW: 106745
BUG: 307570
FIXED-IN: 4.9.3